--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,8 @@
-<h1>Home</h1>
+<div class="center jumbotron">
+  <h1 class="display-2">Alpha Blog</h1>
+  <p class="lead">
+    <%= link_to "Sign up now", articles_path, class: "btn btn-primary btn-lg btn-xlarge" %>
+  </p>
+</div>
 
-<%= link_to "About", about_path %> | <%= link_to "Articles", articles_path  %>
+ 
