--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,9 @@
 <div>
-  <footer>
-    <small>
-      Copyright &copy; Norman Paul Dannug
-    </small>
+  <footer class="navbar-default navbar-fixed-bottom" >
+    <div class="container-fluid">
+      <small>
+        Copyright &copy; Norman Paul Dannug
+      </small>
+    </div>
   </footer>
 </div>
