--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -45,9 +45,29 @@
   font-size: 1.2em;
 }
 
+.article-actions{
+  border-top: 1px solid #eaeaea;
+  padding-top:10px;
+}
+
+.description{
+  margin-top:0;
+}
+
+.article-title{
+  font-weight: bold;
+  font-size: 1.5em;
+}
+
+.article-body{
+  border-top: 1px solid #eaeaea;
+  padding: 5px 0px 5px 0px;
+}
+
 footer{
-  background-color: #303030;
+  background-color: #303030 !important;
   color: #fff;
   text-align: center;
   padding: 10px;
+  
 }
