--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
   <div class="container">
     <%= yield %>
   </div>
-  <%= render 'layouts/footer' %>
+  <div class="fixed-bottom">
+    <%= render 'layouts/footer' %>
+  </div>
 </body>
 </html>
