--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,5 @@
 <h1 align="center">Articles</h1>
 
-
 <% @articles.each do |article| %>
   <div class="row">
     <div class="col-xs-8 col-xs-offset-2">
@@ -10,6 +9,13 @@
         </div>
         <div class="article-body">
           <%= truncate(article.description, length: 100) %>
+        </div>
+        <div style="float:right">
+          <small>
+            Created by: <%= article.user.username if article.user  %>, 
+            <%= time_ago_in_words(article.created_at) %> ago,
+            last updated: <%= time_ago_in_words(article.updated_at) %> ago
+          </small>
         </div>
         <div class="article-actions">
           <%= link_to "Edit this article", edit_article_path(article), class: "btn btn-xs btn-primary" %> 
@@ -22,3 +28,5 @@
     </div>
   </div>
 <% end %>
+
+Show user info in articles
