--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -65,6 +65,11 @@
   padding: 10px 0px 15px 0px;
 }
 
+.listing{
+  list-style: none;
+  padding-left: 0;
+}
+
 footer{
   background-color: #303030 !important;
   color: #fff;
