--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="center jumbotron">
   <h1 class="display-2">Alpha Blog</h1>
   <p class="lead">
-    <%= link_to "Sign up now", articles_path, class: "btn btn-primary btn-lg btn-xlarge" %>
+    <%= link_to "Sign up now", signup_path, class: "btn btn-primary btn-lg btn-xlarge" %>
   </p>
 </div>
 
