--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,6 +14,13 @@
               <%= pluralize(user.articles.count, "article") if user.articles %>
             </small>
           </li>
+          <% if logged_in? and current_user.admin? %>
+            <br/>
+            <li><%= link_to "Delete this user", user_path(user), method: :delete,
+                  data: {confirm: "Are you sure to delete this user and all created articles?"},
+                  class: "btn btn-xs btn-danger" %>
+            </li>
+          <% end %>
         </div>
       </div>
     </ul>
