--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -70,6 +70,16 @@
   padding-left: 0;
 }
 
+.badge{
+  background-color: #cef6f5;
+
+}
+
+.input_checkbox input{
+  width: auto !important;
+  
+}
+
 footer{
   background-color: #303030 !important;
   color: #fff;
