--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -8,13 +8,9 @@
         <div class="article-body">
           <%= truncate(article.description, length: 100) %>
         </div>
-        <div style="float:right">
-          <small>
-            Created by: <%= article.user.username if article.user  %>, 
-            <%= time_ago_in_words(article.created_at) %> ago,
-            last updated: <%= time_ago_in_words(article.updated_at) %> ago
-          </small>
-        </div>
+        <% if article.categories.any? %>
+          <p><%= render article.categories %></p>
+        <% end %>
         <% if logged_in? && (current_user == article.user || current_user.admin?) %>
           <div class="article-actions">
             <%= link_to "Edit this article", edit_article_path(article), class: "btn btn-xs btn-primary" %> 
@@ -24,6 +20,13 @@
                                                class: "btn btn-xs btn-danger" %>
           </div>
         <% end %>
+        <div style="float:right">
+          <small>
+            Created by: <%= article.user.username if article.user  %>, 
+            <%= time_ago_in_words(article.created_at) %> ago,
+            last updated: <%= time_ago_in_words(article.updated_at) %> ago
+          </small>
+        </div>
       </div>
     </div>
   </div>
